--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -18,6 +18,9 @@
   margin: 0;
   padding: 0;
 }
+html {
+  scroll-behavior: smooth;
+}
 body{
   width: 100%;
   /* height: 600vh; */
@@ -78,26 +81,6 @@ section{
   color: #FC0CE4;
   text-decoration: underline;
 }
-
-/* .jumbotron {
-    padding-top: 6rem;
-    width: 100vw;
-    height: max-content;
-    background-color: #112B7E;
-    background-image: url("https://i.postimg.cc/d0QcKzYm/rasn-pixiv.jpg");
-    background-size: cover;
-  }
-  #projects {
-    background-color: #112B7E;
-  }
-  section {
-    padding-top: 5rem;
-  }
-  .tes > h1{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 3.3em;
-  } */
-
 /* ---------------------- JUMBOTRON --------------------------- */
 
 section.ichi{
@@ -184,7 +167,7 @@ section.ichi{
 }
 
 
-/* ABOUT */
+/* -------------------- ABOUT ----------------------- */
 
 section.ni{
   display: flex;
@@ -194,38 +177,32 @@ section.ni{
   width: 100%;
   height: 100vh;
   background-color: #87a3da;
-  /* border: 1px solid rgb(255, 0, 0); */
+  border: 1px solid rgb(255, 0, 0);
 }
 .about{
-  width: 85%;
-  height: 100%;
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgb(0, 255, 21);
+}
+.about article .about-head{
+  border: 1px solid green;
+  width: 100%;
+  font-size: 45px;
+  font-family: sans-serif;
+  color: #FC0CE4;
+  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.about article .about-content{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-family: 'MilkyNice-clean';
-  font-size: 25px;
-  color: #000000;
-  /* border: 1px solid rgb(0, 255, 21); */
-}
-.about-head{
-  /* border: 1px solid green; */
-  width: 190px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  border-radius: 10px;
-  color: #fff;
-  text-decoration: underline;
-}
-.about-content{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding-top:20px;
+  padding-top:10px;
 }
 .abt-fcs{
   color: #112B7E;
@@ -238,25 +215,45 @@ section.ni{
 /* PROJECT */
 
 section.san{
+  padding-top: 3em;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 100%;
   height: 100vh;
+  background-color: #5b719c;
   /* border: 1px solid rgb(255, 0, 0); */
 }
-.san article{
-  width: 90%;
+
+.projek {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 100px;
+  padding-bottom: 80px;
+  /* background-color: #ffffff; */
+}
+
+.projek article {
+  width: inherit;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.san article .title{
-  font-weight: 700;
-  font-family: 'Inter';
+
+.projek article .san-title {
+  width: 100%;
+  font-size: 45px;
+  font-family: sans-serif;
+  color: #FC0CE4;
+  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 15px;
 }
+
 .pro{
   width: 100%;
   /* border: 1px solid rgb(0, 255, 64); */
@@ -267,6 +264,7 @@ section.san{
   align-items: center;
   padding-top: 50px;
 }
+
 .pro .kartu{
   width: 480px;
   display: flex;
@@ -289,23 +287,6 @@ section.san{
   border-bottom-right-radius: 10px;
 }
 
-/* .saigo{
-  border: 1px solid rgb(255, 0, 0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin: 30px;
-}
-.ima{
-  border: 1px solid rgb(255, 0, 0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-} */
-
-
 /* CONTACT */
 
 section.yon{
@@ -315,33 +296,7 @@ section.yon{
   /* border: 1px solid rgb(255, 0, 0); */
   padding-top: 0;
 }
-/* .yon article{
-  display: flex;
-  text-align:center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
-  border: 1px solid green;
-}
-.yon article .title{
-  width: 190px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  border-radius: 10px;
-  color: #FC0CE4;
-  text-decoration: underline;
-  font-family: sans-serif;
-}
-.yon article .tel{
-  border: 1px solid slateblue;
-  display: flex;
-  text-align:center;
-  justify-content: center;
-  flex-direction: column;
-} */
+
 .contact {
   width: 100%;
   display: flex;
@@ -359,7 +314,6 @@ section.yon{
   justify-content: center;
   align-items: center;
 }
-
 
 .contact article .contact-ttl {
   width: 100%;
@@ -411,7 +365,6 @@ section.yon{
   margin-bottom: 20px;
 }
 
-
 .contact article .box-contact .message {
   width: 100%;
   border-radius: 15px;
@@ -421,7 +374,6 @@ section.yon{
   padding: 12px;
   margin-bottom: 25px;
 }
-
 
 input[type=text], input[type=email], textarea[type=text] {
   box-sizing: border-box;
@@ -449,7 +401,13 @@ input[type=text], input[type=email], textarea[type=text] {
 .contact article .box-contact .submit:hover {
   background-color: #dd24cb;
 }
+.yon svg{
+  position: relative;
+  margin-bottom: -20px;
+}
 
+
+/* footer */
 
 footer{
   background-color: #000000;
@@ -460,6 +418,7 @@ footer{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* margin-top: 20px; */
   padding-top: 80px;
   padding-bottom: 30px;
 }
@@ -481,12 +440,3 @@ footer .footer-copyright .copyright {
   color: #FC0CE4;
   font-weight: bold;
 }
-
-
-/* .ichi svg,
-.ni svg,
-.san svg,
-.yon svg{
-  display: none;
-  width: 200%;
-} */
