--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -2,18 +2,24 @@
   font-family: 'Aquawax black';
   src: url(../fonts/Aquawax\ Black\ Trial.ttf);
 }
+
 @font-face {
   font-family: 'Aquawax light';
   src: url(../fonts/Aquawax\ Light\ Trial.ttf);
 }
+
 @font-face {
   font-family: 'MilkyNice';
   src: url(../fonts/MilkyNice.ttf);
 }
+
 @font-face {
   font-family: 'MilkyNice-clean';
   src: url(../fonts/MilkyNice-Clean.ttf);
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -24,7 +30,7 @@ html {
 body{
   width: 100%;
   /* height: 600vh; */
-  background-color: #97A4BF;
+  background-color: #473e3e;
   overflow-x: hidden;
   color: rgb(255, 255, 255);
 }
@@ -48,8 +54,22 @@ section{
   height: 80%;
   width: 100%;
 }
+.gambar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
 .gambar img{
   border-radius: 50px;
+  margin-right: 10px;
+}
+.gambar p{
+  font-weight: 700;
+  font-family: 'Poppins', sans-serif;
+}
+.gambar span.fcs{
+  color: #2BE4D5;
 }
 .navbar-brand{
   display: flex;
@@ -78,7 +98,7 @@ section{
   text-decoration: none;
 }
 .nav-link:hover{
-  color: #FC0CE4;
+  color: #2BE4D5;
   text-decoration: underline;
 }
 /* ---------------------- JUMBOTRON --------------------------- */
@@ -107,7 +127,7 @@ section.ichi{
   width: 25%;
   height: 80%;
   /* border: 2px solid white; */
-  /* background-color: #FC0CE4; */
+  /* background-color: #2BE4D5; */
   position: relative;
   top: 0;
   left: 0;
@@ -129,19 +149,19 @@ section.ichi{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  font-family: 'MilkyNice-clean';
+  font-family: 'Poppins', sans-serif;
   font-size: 25px;
   color: #ffffff;
   /* border: 1px solid salmon; */
   padding: 50px;
 }
 .jumbotron{
-  font-weight: 500;
-  font-family: 'MilkyNice-clean';
+  font-weight: 800;
+  font-family: sans-serif;
   margin-top: 15px;
 }
 .fokus{
-  color: #112B7E;
+  color: #2BE4D5;
 }
 .text{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -155,7 +175,7 @@ section.ichi{
   justify-content: center;
   align-items: center;
   /* border: 1px solid red; */
-  background-color: #112B7E;
+  background-color: #2BE4D5;
   border-radius: 20px;
   color: black;
   text-decoration: none;
@@ -163,7 +183,7 @@ section.ichi{
 .read:focus{
   text-decoration: underline;
   background-color: black;
-  color: #FC0CE4;
+  color: #2BE4D5;
 }
 
 
@@ -176,8 +196,8 @@ section.ni{
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  background-color: #87a3da;
-  border: 1px solid rgb(255, 0, 0);
+  background-color: #201A1A;
+  /* border: 1px solid rgb(255, 0, 0); */
 }
 .about{
   width: inherit;
@@ -185,31 +205,32 @@ section.ni{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgb(0, 255, 21);
+  /* border: 1px solid rgb(0, 255, 21); */
 }
 .about article .about-head{
-  border: 1px solid green;
+  /* border: 1px solid green; */
   width: 100%;
   font-size: 45px;
   font-family: sans-serif;
-  color: #FC0CE4;
+  color: #2BE4D5;
   margin-bottom: 50px;
   text-align: center;
+  text-transform: uppercase;
   margin-bottom: 15px;
 }
 .about article .about-content{
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   flex-direction: column;
+  font-family: 'Mukta', sans-serif;
   padding-top:10px;
+  font-size: 25px;
 }
 .abt-fcs{
-  color: #112B7E;
-  text-transform: uppercase;
-}
-.satu{
-  font-family: 'Altone-B';
+  color: #2BE4D5;
+  font-weight: 600;
 }
 
 /* PROJECT */
@@ -222,7 +243,7 @@ section.san{
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  background-color: #5b719c;
+  background-color: #473e3e;
   /* border: 1px solid rgb(255, 0, 0); */
 }
 
@@ -248,7 +269,7 @@ section.san{
   width: 100%;
   font-size: 45px;
   font-family: sans-serif;
-  color: #FC0CE4;
+  color: #2BE4D5;
   margin-bottom: 50px;
   text-align: center;
   margin-bottom: 15px;
@@ -286,12 +307,27 @@ section.san{
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+.pro .kartu .judul-kartu {
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 20px;
+  color: whitesmoke;
+  margin-bottom: 10px;
+}
+
+.pro .kartu .text-kartu {
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 15px;
+  line-height: 23px;
+  color: rgba(245, 245, 245, 0.482);
+}
 
 /* CONTACT */
 
 section.yon{
   width: 100%;
-  background-color: #87a3da;
+  background-color: #201A1A;
   color: #000000;
   /* border: 1px solid rgb(255, 0, 0); */
   padding-top: 0;
@@ -319,7 +355,7 @@ section.yon{
   width: 100%;
   font-size: 45px;
   font-family: sans-serif;
-  color: #FC0CE4;
+  color: #2BE4D5;
   margin-bottom: 50px;
   text-align: center;
   margin-bottom: 15px;
@@ -329,7 +365,7 @@ section.yon{
   width: 50%;
   font-family: sans-serif;
   font-size: 20px;
-  color: rgba(0, 0, 0, 0.546);
+  color: #ffffff;
   text-align: center;
   margin-bottom: 50px;
 }
@@ -348,7 +384,7 @@ section.yon{
   font-family: sans-serif;
   font-size: 16px;
   font-weight: bold;
-  color: #FC0CE4;
+  color: #2BE4D5;
   line-height: 24px;
 }
 
@@ -358,7 +394,7 @@ section.yon{
   height: 48px;
   font-family: sans-serif;
   font-size: 16px;
-  color: #FC0CE4;
+  color: #000000;
   padding: 12px;
   border: none;
   border-radius: 10px;
@@ -370,7 +406,7 @@ section.yon{
   border-radius: 15px;
   font-family: sans-serif;
   font-size: 16px;
-  color: #FC0CE4;
+  color: #000000;
   padding: 12px;
   margin-bottom: 25px;
 }
@@ -393,13 +429,13 @@ input[type=text], input[type=email], textarea[type=text] {
   font-family: sans-serif;
   text-decoration: none;
   font-weight: 700;
-  color: #5e2058;
-  background-color: #FC0CE4;
+  color: #000000;
+  background-color: #2BE4D5;
   border-radius: 25px;    
 }
 
 .contact article .box-contact .submit:hover {
-  background-color: #dd24cb;
+  background-color: #24d1dd;
 }
 .yon svg{
   position: relative;
@@ -411,7 +447,7 @@ input[type=text], input[type=email], textarea[type=text] {
 
 footer{
   background-color: #000000;
-  color: #FC0CE4;
+  color: #2BE4D5;
   font-weight: 500;
   width: 100%;
   display: flex;
@@ -437,6 +473,6 @@ footer .footer-copyright .copyright {
 
 .hlg {
   text-decoration: none;
-  color: #FC0CE4;
+  color: #2BE4D5;
   font-weight: bold;
 }
