--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -283,10 +283,10 @@ section.ni{
   font-weight: 600;
 }
 .sosial-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
 }
 .sosial-link .button {
   display: inline-block;
@@ -320,6 +320,115 @@ section.ni{
   line-height: 60px;
   color: #2BE4D5;
 }
+
+
+/*--------------- SKILLS --------------- */
+
+section.skills{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 100%; */
+  height: 100vh;
+  background-color: #271818;
+  border: 1px solid rgb(255, 0, 0);
+}
+section.skills .skill-content{
+  height: 100%;
+  height: 80vh;
+  background-color: #0f172a;
+  border: 1px solid salmon;
+}
+.skills-content article{
+  position: relative;
+  max-width: 500px;
+  width: 100%;
+  background: #fff;
+  margin: 0 15px;
+  padding: 10px 20px;
+  border-radius: 7px;
+  border: 1px solid rgb(255, 25, 0);
+}
+.skills-content article .skill-box{
+  width: 100%;
+  margin: 25px 0;
+}
+.skill-box .title{
+  display: flex;
+  font-size: 14px;
+  font-weight: 600;
+  color: #333;
+}
+.skill-box .skill-bar{
+  height: 8px;
+  width: 100%;
+  border-radius: 6px;
+  margin-top: 6px;
+  background: rgba(0,0,0,0.1);
+}
+.skill-bar .skill-per{
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 80%;
+  border-radius: 6px;
+  background: #4070f4;
+  animation: progress 0.4s ease-in-out forwards;
+  opacity: 0;
+}
+.skill-per.css{
+  width: 60%;
+  animation-delay: .1s;
+}
+.skill-per.javascript{
+  width: 30%;
+  animation-delay: .2s;
+}
+.skill-per.debian{
+  width: 70%;
+  animation-delay: .3s;
+}
+.skill-per.mikrotik{
+  width: 50%;
+  animation-delay: .4s;
+}
+.skill-per.desainposter{
+  width: 45%;
+  animation-delay: .5s;
+}
+@keyframes progress {
+  0%{
+      width: 0;
+      opacity: 1;
+  }
+  100%{
+      opacity: 1;
+  }
+}
+.skill-per .tooltip{
+  position: absolute;
+  right: -14px;
+  top: -28px;
+  font-size: 9px;
+  font-weight: 500;
+  color: #fff;
+  padding: 2px 6px;
+  border-radius: 3px;
+  background: #4070f4;
+  z-index: 1;
+}
+.tooltip::before{
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  height: 10px;
+  width: 10px;
+  z-index: -1;
+  background-color: #4070f4;
+  transform: translateX(-50%) rotate(45deg);
+}
+
 /*--------------- PROJECT --------------- */
 
 section.san{
