--- a/portofolio/style.css
+++ b/portofolio/style.css
@@ -361,7 +361,7 @@ section.skills .skill-title {
   margin: 0 15px;
   padding: 10px 20px;
   border-radius: 7px;
-  border: 1px solid rgb(255, 25, 0);
+/*   border: 1px solid rgb(255, 25, 0); */
 }
 .skills-content article .skill-box{
   width: 100%;
